--- a/custom/plugins/BlogPlugin/src/Resources/app/administration/src/module/sw-blog/page/sw-blog-list/sw-blog-list.html.twig
+++ b/custom/plugins/BlogPlugin/src/Resources/app/administration/src/module/sw-blog/page/sw-blog-list/sw-blog-list.html.twig
@@ -2,22 +2,17 @@
 	<sw-page class="sw-blog-list">
 		{% block sw_blog_list_smart_bar_actions %}
 			<template #smart-bar-actions>
-				<sw-button variant="primary" :routerlink="{ name: 'sw.blog.create' }">
-					<p>Create Blog</p>
+				<sw-button variant="primary" :routerLink="{ name: 'sw.blog.create' }">
+					<p>
+						{{$tc('sw-blog.list.buttonAddBlog')}}
+					</p>
 				</sw-button>
 			</template>
 		{% endblock %}
 		<template #content>
-            {% block sw_blog_list_content %}
-                <sw-entity-listing
-                    :items="blogs"
-                    :repository="repository"
-                    :showSelection="false"
-                    :columns="columns"
-                    detailRoute="sw.blog.detail"
-                >   
-                </sw-entity-listing>
-            {% endblock %}
-        </template>
+			{% block sw_blog_list_content %}
+				<sw-entity-listing :items="blog" :repository="repository" :showselection="false" :columns="columns" :is-loading="isLoading" :allow-edit="true" :allow-inline-edit="true" :allow-delete="true"></sw-entity-listing>
+			{% endblock %}
+		</template>
 	</sw-page>
 {% endblock %}
