--- a/custom/plugins/BlogPlugin/src/Resources/app/administration/src/module/sw-blog-category/page/sw-blog-category-detail/sw-blog-category-detail.html.twig
+++ b/custom/plugins/BlogPlugin/src/Resources/app/administration/src/module/sw-blog-category/page/sw-blog-category-detail/sw-blog-category-detail.html.twig
@@ -1,18 +1,17 @@
 {% block sw_blog_category_detail %}
 	<sw-page class="sw-blog-detail">
 		<template #smart-bar-actions>
-			<sw-button :routelink="{name: 'sw.blog.category.index'}">
-				Cancel
+			<sw-button :routerLink="{name: 'sw.blog.category.index'}">
+				{{$tc('sw-blog-category.general.cancel')}}
 			</sw-button>
 			<sw-button-process :isloading="isLoading" :processsuccess="processSuccess" variant="primary" @process-finish="saveFinish" @click="onClickSave">
-				Save
+				{{$tc('sw-blog-category.general.save')}}
 			</sw-button-process>
 		</template>
 		<template #content>
 			<sw-card-view>
 				<sw-card v-if="blogCategory" :isloading="isLoading">
-					<sw-field v-model="blogCategory.name" :label="$tc('sw-blog-category.detail.labelName')"></sw-field>
-					<sw-text-field v-model="blogCategory.name" :label="$tc('sw-blog-category.detail.labelName')"></sw-text-field>
+					<sw-text-field v-model:value="blogCategory.name" :placeholder="$tc('sw-blog-category.detail.placeholderName')" :label="$tc('sw-blog-category.detail.labelName')" name="name" validation="required" required/>
 				</sw-card>
 			</sw-card-view>
 		</template>
